# opengl-apriltag

./: .gitignore  CMakeLists.txt  LICENSE  README.md
calibration/: camera_calibration.xml
data/: config.db  init-config.sql
include/: CameraCalibration.hpp  ConfigManager.hpp  CpuPostProcessor.hpp  DetectionResult.hpp  GpuDetector.hpp  HttpServer.hpp
shaders/: adaptive_threshold.comp  ccl_final.comp  ccl_init.comp  ccl_merge.comp  extract_border.comp
src/: CameraCalibration.cpp  ConfigManager.cpp  CpuPostProcessor.cpp  DetectionResult.cpp  GpuDetector.cpp  HttpServer.cpp  main.cpp
webui/: cameracalibration.html  index.html
webui/css/: base.css  jquery-ui.css
webui/js/: jquery-ui.js
